testing minimal level

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,6 @@
 platform = atmelavr
 board = nanoatmega328
 framework = arduino
-lib_deps = davylandman/AESLib@0.0.0-alpha+sha.445cfed9c9
+lib_deps = 
+	davylandman/AESLib@0.0.0-alpha+sha.445cfed9c9
+	arduino-libraries/Servo@^1.1.8
