--- a/Doorlock/app/build.gradle
+++ b/Doorlock/app/build.gradle
@@ -38,4 +38,13 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation(group: 'com.an.biometric', name: 'biometric-auth', version: '0.1.0', ext: 'aar', classifier: '')
+}
+
+task wrapper(type: Wrapper){
+    gradleVersion = '2.14.1'
+}
+
+task prepareKotlinBuildScriptModel {
+
 }
